[package]
name = "stoked2d"
version = "0.1.0"
edition = "2021"
description = "2D Lagragian fluid simulation using SPH discretization"

[profile.release]
# lto = "fat"
panic = "abort"
opt-level = 3

[dependencies]
# DRAWING AND GUI
egui_speedy2d = "0.4.0"
speedy2d = "1.12.0"
colorgrad = "0.6.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
indicatif = "0.17.8"

# VIDEO EXPORT
video-rs = { version = "0.7", features = ["ndarray"] }
ndarray = "0.15.6"

# VECTORS AND MATH
glam = { version = "0.25.0", features = ["fast-math"] }
approx = "0.5.1"
rand = "0.8.5"
lindel = "0.1.1"
voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }

# MEMORY AND GLOBALS
lazy_static = "1.4.0"
atomic_float = "0.1.0"
atomic_enum = "0.2.0"
atomic = "0.6.0"
mimalloc = { version = "*", default-features = false }

# PARALLELISM
rayon = "1.8.0"

# GPU COMPUTING
ocl = "0.19.6"